# transcriber

./: .env.local.example  .gitignore  Brewfile  README.md  setup.sh  start.sh
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/src/transcriber/: __init__.py  aligner.py  asr.py  audio.py  cli.py  diarization.py  env.py  memory.py  merge.py  pipeline.py  progress.py  schema.py  server.py
backend/tests/: test_merge.py
frontend/: .oxlintrc.json  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  transcript.txt  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo
frontend/src/main/: index.ts  minutesStore.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
frontend/src/renderer/src/: App.vue
frontend/src/renderer/src/components/: TranscribeView.vue
frontend/src/renderer/src/lib/: transcribeApi.ts
packaging/homebrew/: transcriber.rb.template
scripts/: render-homebrew-cask.mjs  update-homebrew-tap.sh
